Add push buttons for loading raster and track. (see #2)

--- a/ground_radiation_monitoring_dockwidget_base.ui
+++ b/ground_radiation_monitoring_dockwidget_base.ui
@@ -6,21 +6,28 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>368</width>
-    <height>93</height>
+    <width>362</width>
+    <height>90</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Ground Radiation Monitoring</string>
   </property>
   <widget class="QWidget" name="dockWidgetContents">
-   <layout class="QGridLayout" name="gridLayout">
+   <layout class="QGridLayout" name="gridLayout_2">
     <item row="0" column="0">
-     <layout class="QFormLayout" name="formLayout">
-      <item row="0" column="0">
-       <widget class="QLabel" name="raster_label">
+     <layout class="QGridLayout" name="gridLayout">
+      <item row="1" column="0">
+       <widget class="QLabel" name="track_label">
         <property name="text">
-         <string>Raster:</string>
+         <string>Track:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="2">
+       <widget class="QPushButton" name="load_raster">
+        <property name="text">
+         <string>Load raster</string>
         </property>
        </widget>
       </item>
@@ -34,13 +41,6 @@
         </property>
        </widget>
       </item>
-      <item row="1" column="0">
-       <widget class="QLabel" name="track_label">
-        <property name="text">
-         <string>Track:</string>
-        </property>
-       </widget>
-      </item>
       <item row="1" column="1">
        <widget class="QComboBox" name="track_box">
         <property name="minimumSize">
@@ -48,6 +48,20 @@
           <width>181</width>
           <height>22</height>
          </size>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="2">
+       <widget class="QPushButton" name="load_track">
+        <property name="text">
+         <string>Load track</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="0">
+       <widget class="QLabel" name="raster_label">
+        <property name="text">
+         <string>Raster:</string>
         </property>
        </widget>
       </item>
