--- a/ground_radiation_monitoring_dockwidget_base.ui
+++ b/ground_radiation_monitoring_dockwidget_base.ui
@@ -58,10 +58,30 @@
        </widget>
       </item>
       <item row="0" column="1">
-       <widget class="QgsMapLayerComboBox" name="raster_box"/>
+       <widget class="QgsMapLayerComboBox" name="raster_box">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="sizeAdjustPolicy">
+         <enum>QComboBox::AdjustToMinimumContentsLengthWithIcon</enum>
+        </property>
+       </widget>
       </item>
       <item row="2" column="1">
-       <widget class="QgsMapLayerComboBox" name="track_box"/>
+       <widget class="QgsMapLayerComboBox" name="track_box">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="sizeAdjustPolicy">
+         <enum>QComboBox::AdjustToMinimumContentsLengthWithIcon</enum>
+        </property>
+       </widget>
       </item>
      </layout>
     </item>
