--- a/ground_radiation_monitoring_dockwidget_base.ui
+++ b/ground_radiation_monitoring_dockwidget_base.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>687</width>
-    <height>127</height>
+    <width>440</width>
+    <height>141</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -15,31 +15,10 @@
   </property>
   <widget class="QWidget" name="dockWidgetContents">
    <layout class="QGridLayout" name="gridLayout">
-    <item row="1" column="0">
-     <widget class="QLabel" name="track_label">
-      <property name="text">
-       <string>Track:</string>
-      </property>
-     </widget>
-    </item>
-    <item row="0" column="5">
-     <widget class="QPushButton" name="load_raster">
-      <property name="text">
-       <string>Load raster</string>
-      </property>
-     </widget>
-    </item>
     <item row="0" column="0">
      <widget class="QLabel" name="raster_label">
       <property name="text">
        <string>Raster:</string>
-      </property>
-     </widget>
-    </item>
-    <item row="1" column="5">
-     <widget class="QPushButton" name="load_track">
-      <property name="text">
-       <string>Load track</string>
       </property>
      </widget>
     </item>
@@ -56,7 +35,52 @@
       </property>
      </widget>
     </item>
-    <item row="1" column="1">
+    <item row="0" column="2">
+     <widget class="QComboBox" name="unit_box">
+      <item>
+       <property name="text">
+        <string>nanoSv/h</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>microSv/h</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>nanoGy/h</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>microGy/h</string>
+       </property>
+      </item>
+     </widget>
+    </item>
+    <item row="0" column="3">
+     <widget class="QPushButton" name="load_raster">
+      <property name="text">
+       <string>Load raster</string>
+      </property>
+     </widget>
+    </item>
+    <item row="1" column="0">
+     <widget class="QLabel" name="track_label">
+      <property name="text">
+       <string>Track:</string>
+      </property>
+     </widget>
+    </item>
+    <item row="1" column="3">
+     <widget class="QPushButton" name="load_track">
+      <property name="text">
+       <string>Load track</string>
+      </property>
+     </widget>
+    </item>
+    <item row="1" column="1" colspan="2">
      <widget class="QgsMapLayerComboBox" name="track_box">
       <property name="sizePolicy">
        <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
