--- a/ground_radiation_monitoring_dockwidget_base.ui
+++ b/ground_radiation_monitoring_dockwidget_base.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>440</width>
-    <height>141</height>
+    <width>383</width>
+    <height>130</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -35,7 +35,7 @@
       </property>
      </widget>
     </item>
-    <item row="0" column="2">
+    <item row="0" column="2" colspan="2">
      <widget class="QComboBox" name="unit_box">
       <item>
        <property name="text">
@@ -59,7 +59,7 @@
       </item>
      </widget>
     </item>
-    <item row="0" column="3">
+    <item row="0" column="4">
      <widget class="QPushButton" name="load_raster">
       <property name="text">
        <string>Load raster</string>
@@ -73,14 +73,49 @@
       </property>
      </widget>
     </item>
-    <item row="1" column="3">
+    <item row="1" column="4">
      <widget class="QPushButton" name="load_track">
       <property name="text">
        <string>Load track</string>
       </property>
      </widget>
     </item>
-    <item row="1" column="1" colspan="2">
+    <item row="2" column="0" colspan="5">
+     <widget class="Line" name="line">
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
+      </property>
+     </widget>
+    </item>
+    <item row="3" column="0">
+     <widget class="QLabel" name="file_label">
+      <property name="text">
+       <string>File:</string>
+      </property>
+     </widget>
+    </item>
+    <item row="3" column="1" colspan="2">
+     <widget class="QLineEdit" name="save_file">
+      <property name="readOnly">
+       <bool>true</bool>
+      </property>
+     </widget>
+    </item>
+    <item row="3" column="3">
+     <widget class="QToolButton" name="dir_button">
+      <property name="text">
+       <string>...</string>
+      </property>
+     </widget>
+    </item>
+    <item row="3" column="4">
+     <widget class="QPushButton" name="save_button">
+      <property name="text">
+       <string>Save</string>
+      </property>
+     </widget>
+    </item>
+    <item row="1" column="1" colspan="3">
      <widget class="QgsMapLayerComboBox" name="track_box">
       <property name="sizePolicy">
        <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
