--- a/ground_radiation_monitoring_dockwidget_base.ui
+++ b/ground_radiation_monitoring_dockwidget_base.ui
@@ -6,126 +6,183 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>383</width>
-    <height>130</height>
+    <width>369</width>
+    <height>176</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Ground Radiation Monitoring</string>
   </property>
   <widget class="QWidget" name="dockWidgetContents">
-   <layout class="QGridLayout" name="gridLayout">
+   <layout class="QGridLayout" name="gridLayout_2">
     <item row="0" column="0">
-     <widget class="QLabel" name="raster_label">
-      <property name="text">
-       <string>Raster:</string>
+     <widget class="QTabWidget" name="tabWidget">
+      <property name="currentIndex">
+       <number>1</number>
       </property>
-     </widget>
-    </item>
-    <item row="0" column="1">
-     <widget class="QgsMapLayerComboBox" name="raster_box">
-      <property name="sizePolicy">
-       <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
-        <horstretch>0</horstretch>
-        <verstretch>0</verstretch>
-       </sizepolicy>
-      </property>
-      <property name="sizeAdjustPolicy">
-       <enum>QComboBox::AdjustToMinimumContentsLengthWithIcon</enum>
-      </property>
-     </widget>
-    </item>
-    <item row="0" column="2" colspan="2">
-     <widget class="QComboBox" name="unit_box">
-      <item>
-       <property name="text">
-        <string>nanoSv/h</string>
-       </property>
-      </item>
-      <item>
-       <property name="text">
-        <string>microSv/h</string>
-       </property>
-      </item>
-      <item>
-       <property name="text">
-        <string>nanoGy/h</string>
-       </property>
-      </item>
-      <item>
-       <property name="text">
-        <string>microGy/h</string>
-       </property>
-      </item>
-     </widget>
-    </item>
-    <item row="0" column="4">
-     <widget class="QPushButton" name="load_raster">
-      <property name="text">
-       <string>Load raster</string>
-      </property>
-     </widget>
-    </item>
-    <item row="1" column="0">
-     <widget class="QLabel" name="track_label">
-      <property name="text">
-       <string>Track:</string>
-      </property>
-     </widget>
-    </item>
-    <item row="1" column="4">
-     <widget class="QPushButton" name="load_track">
-      <property name="text">
-       <string>Load track</string>
-      </property>
-     </widget>
-    </item>
-    <item row="2" column="0" colspan="5">
-     <widget class="Line" name="line">
-      <property name="orientation">
-       <enum>Qt::Horizontal</enum>
-      </property>
-     </widget>
-    </item>
-    <item row="3" column="0">
-     <widget class="QLabel" name="file_label">
-      <property name="text">
-       <string>File:</string>
-      </property>
-     </widget>
-    </item>
-    <item row="3" column="1" colspan="2">
-     <widget class="QLineEdit" name="save_file">
-      <property name="readOnly">
-       <bool>true</bool>
-      </property>
-     </widget>
-    </item>
-    <item row="3" column="3">
-     <widget class="QToolButton" name="dir_button">
-      <property name="text">
-       <string>...</string>
-      </property>
-     </widget>
-    </item>
-    <item row="3" column="4">
-     <widget class="QPushButton" name="save_button">
-      <property name="text">
-       <string>Save</string>
-      </property>
-     </widget>
-    </item>
-    <item row="1" column="1" colspan="3">
-     <widget class="QgsMapLayerComboBox" name="track_box">
-      <property name="sizePolicy">
-       <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
-        <horstretch>0</horstretch>
-        <verstretch>0</verstretch>
-       </sizepolicy>
-      </property>
-      <property name="sizeAdjustPolicy">
-       <enum>QComboBox::AdjustToMinimumContentsLengthWithIcon</enum>
-      </property>
+      <widget class="QWidget" name="main">
+       <attribute name="title">
+        <string>Main</string>
+       </attribute>
+       <layout class="QGridLayout" name="gridLayout">
+        <item row="0" column="0">
+         <widget class="QLabel" name="raster_label">
+          <property name="text">
+           <string>Raster:</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="1">
+         <widget class="QgsMapLayerComboBox" name="raster_box">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="sizeAdjustPolicy">
+           <enum>QComboBox::AdjustToMinimumContentsLengthWithIcon</enum>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="2" colspan="2">
+         <widget class="QComboBox" name="unit_box">
+          <item>
+           <property name="text">
+            <string>nanoSv/h</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>microSv/h</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>nanoGy/h</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>microGy/h</string>
+           </property>
+          </item>
+         </widget>
+        </item>
+        <item row="0" column="4">
+         <widget class="QPushButton" name="load_raster">
+          <property name="text">
+           <string>Load raster</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="0">
+         <widget class="QLabel" name="track_label">
+          <property name="text">
+           <string>Track:</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="4">
+         <widget class="QPushButton" name="load_track">
+          <property name="text">
+           <string>Load track</string>
+          </property>
+         </widget>
+        </item>
+        <item row="2" column="0" colspan="5">
+         <widget class="Line" name="line">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+         </widget>
+        </item>
+        <item row="3" column="0">
+         <widget class="QLabel" name="file_label">
+          <property name="text">
+           <string>File:</string>
+          </property>
+         </widget>
+        </item>
+        <item row="3" column="3">
+         <widget class="QToolButton" name="dir_button">
+          <property name="text">
+           <string>...</string>
+          </property>
+         </widget>
+        </item>
+        <item row="3" column="4">
+         <widget class="QPushButton" name="save_button">
+          <property name="text">
+           <string>Save</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="1" colspan="3">
+         <widget class="QgsMapLayerComboBox" name="track_box">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="sizeAdjustPolicy">
+           <enum>QComboBox::AdjustToMinimumContentsLengthWithIcon</enum>
+          </property>
+         </widget>
+        </item>
+        <item row="3" column="1" colspan="2">
+         <widget class="QLineEdit" name="save_file">
+          <property name="readOnly">
+           <bool>true</bool>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </widget>
+      <widget class="QWidget" name="config">
+       <attribute name="title">
+        <string>Sampling config.</string>
+       </attribute>
+       <layout class="QGridLayout" name="gridLayout_3">
+        <item row="0" column="0">
+         <widget class="QLabel" name="label">
+          <property name="text">
+           <string>Distance between track vertices:</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="1">
+         <widget class="QLineEdit" name="vertex_dist">
+          <property name="text">
+           <string>1</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="2">
+         <widget class="QLabel" name="label_2">
+          <property name="text">
+           <string>m</string>
+          </property>
+         </widget>
+        </item>
+       </layout>
+       <zorder>track_box</zorder>
+       <zorder>load_track</zorder>
+       <zorder>load_raster</zorder>
+       <zorder>save_file</zorder>
+       <zorder>track_label</zorder>
+       <zorder>line</zorder>
+       <zorder>file_label</zorder>
+       <zorder>save_button</zorder>
+       <zorder>dir_button</zorder>
+       <zorder>raster_label</zorder>
+       <zorder>raster_box</zorder>
+       <zorder>unit_box</zorder>
+       <zorder>label</zorder>
+       <zorder>vertex_dist</zorder>
+       <zorder>label_2</zorder>
+      </widget>
      </widget>
     </item>
    </layout>
