--- a/ground_radiation_monitoring_dockwidget_base.ui
+++ b/ground_radiation_monitoring_dockwidget_base.ui
@@ -10,6 +10,12 @@
     <height>176</height>
    </rect>
   </property>
+  <property name="maximumSize">
+   <size>
+    <width>524287</width>
+    <height>176</height>
+   </size>
+  </property>
   <property name="windowTitle">
    <string>Ground Radiation Monitoring</string>
   </property>
