--- a/ground_radiation_monitoring_dockwidget_base.ui
+++ b/ground_radiation_monitoring_dockwidget_base.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>329</width>
-    <height>181</height>
+    <width>377</width>
+    <height>218</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -86,17 +86,41 @@
           </property>
          </widget>
         </item>
-        <item row="3" column="0" rowspan="3">
+        <item row="3" column="0">
          <widget class="QLabel" name="file_label">
           <property name="text">
-           <string>File:</string>
+           <string>Csv file:</string>
           </property>
          </widget>
         </item>
-        <item row="3" column="1" rowspan="3">
+        <item row="3" column="1">
          <widget class="QLineEdit" name="save_file">
           <property name="readOnly">
            <bool>true</bool>
+          </property>
+         </widget>
+        </item>
+        <item row="3" column="2">
+         <widget class="QToolButton" name="dir_button">
+          <property name="text">
+           <string>...</string>
+          </property>
+         </widget>
+        </item>
+        <item row="4" column="0">
+         <widget class="QLabel" name="label_4">
+          <property name="text">
+           <string>Shapefile:</string>
+          </property>
+         </widget>
+        </item>
+        <item row="4" column="1">
+         <widget class="QLineEdit" name="shp_file"/>
+        </item>
+        <item row="4" column="2">
+         <widget class="QToolButton" name="shp_button">
+          <property name="text">
+           <string>...</string>
           </property>
          </widget>
         </item>
@@ -104,13 +128,6 @@
          <widget class="QPushButton" name="save_button">
           <property name="text">
            <string>Save</string>
-          </property>
-         </widget>
-        </item>
-        <item row="4" column="2">
-         <widget class="QToolButton" name="dir_button">
-          <property name="text">
-           <string>...</string>
           </property>
          </widget>
         </item>
