--- a/ground_radiation_monitoring_dockwidget_base.ui
+++ b/ground_radiation_monitoring_dockwidget_base.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>345</width>
-    <height>201</height>
+    <height>241</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -87,48 +87,65 @@
          </widget>
         </item>
         <item row="3" column="0">
-         <widget class="QLabel" name="file_label">
+         <widget class="QLabel" name="label_7">
           <property name="text">
-           <string>Csv file:</string>
+           <string>Report:</string>
           </property>
          </widget>
         </item>
         <item row="3" column="1">
-         <widget class="QLineEdit" name="save_file">
-          <property name="readOnly">
-           <bool>true</bool>
-          </property>
-         </widget>
+         <widget class="QLineEdit" name="report_file"/>
         </item>
         <item row="3" column="2">
-         <widget class="QToolButton" name="dir_button">
+         <widget class="QToolButton" name="report_button">
           <property name="text">
            <string>...</string>
           </property>
          </widget>
         </item>
         <item row="4" column="0">
-         <widget class="QLabel" name="label_4">
+         <widget class="QLabel" name="file_label">
           <property name="text">
-           <string>Shapefile:</string>
+           <string>Csv file:</string>
           </property>
          </widget>
         </item>
         <item row="4" column="1">
-         <widget class="QLineEdit" name="shp_file">
+         <widget class="QLineEdit" name="save_file">
           <property name="readOnly">
            <bool>true</bool>
           </property>
          </widget>
         </item>
         <item row="4" column="2">
+         <widget class="QToolButton" name="dir_button">
+          <property name="text">
+           <string>...</string>
+          </property>
+         </widget>
+        </item>
+        <item row="5" column="0">
+         <widget class="QLabel" name="label_4">
+          <property name="text">
+           <string>Shapefile:</string>
+          </property>
+         </widget>
+        </item>
+        <item row="5" column="1">
+         <widget class="QLineEdit" name="shp_file">
+          <property name="readOnly">
+           <bool>true</bool>
+          </property>
+         </widget>
+        </item>
+        <item row="5" column="2">
          <widget class="QToolButton" name="shp_button">
           <property name="text">
            <string>...</string>
           </property>
          </widget>
         </item>
-        <item row="4" column="3">
+        <item row="5" column="3">
          <widget class="QPushButton" name="save_button">
           <property name="text">
            <string>Save</string>
@@ -149,7 +166,7 @@
           </property>
          </widget>
         </item>
-        <item row="0" column="1">
+        <item row="0" column="2">
          <widget class="QComboBox" name="unit_box">
           <item>
            <property name="text">
@@ -174,27 +191,34 @@
          </widget>
         </item>
         <item row="1" column="0">
+         <widget class="QLabel" name="label_5">
+          <property name="text">
+           <string>Speed:</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="2">
+         <widget class="QLineEdit" name="speed">
+          <property name="text">
+           <string>50</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="3" colspan="2">
+         <widget class="QLabel" name="label_6">
+          <property name="text">
+           <string>km/h</string>
+          </property>
+         </widget>
+        </item>
+        <item row="2" column="0" colspan="2">
          <widget class="QLabel" name="label">
           <property name="text">
            <string>Distance between track vertices:</string>
           </property>
          </widget>
         </item>
-        <item row="1" column="1">
-         <widget class="QLineEdit" name="vertex_dist">
-          <property name="text">
-           <string>1</string>
-          </property>
-         </widget>
-        </item>
-        <item row="1" column="2">
-         <widget class="QLabel" name="label_2">
-          <property name="text">
-           <string>m</string>
-          </property>
-         </widget>
-        </item>
-        <item row="2" column="0">
+        <item row="3" column="1">
          <spacer name="verticalSpacer">
           <property name="orientation">
            <enum>Qt::Vertical</enum>
@@ -206,6 +230,20 @@
            </size>
           </property>
          </spacer>
+        </item>
+        <item row="2" column="2">
+         <widget class="QLineEdit" name="vertex_dist">
+          <property name="text">
+           <string>1</string>
+          </property>
+         </widget>
+        </item>
+        <item row="2" column="3">
+         <widget class="QLabel" name="label_2">
+          <property name="text">
+           <string>m</string>
+          </property>
+         </widget>
         </item>
        </layout>
       </widget>
