--- a/ground_radiation_monitoring_dockwidget_base.ui
+++ b/ground_radiation_monitoring_dockwidget_base.ui
@@ -111,7 +111,7 @@
          </widget>
         </item>
         <item row="4" column="1">
-         <widget class="QLineEdit" name="save_file">
+         <widget class="QLineEdit" name="csv_file">
           <property name="readOnly">
            <bool>true</bool>
           </property>
