--- a/ground_radiation_monitoring_dockwidget_base.ui
+++ b/ground_radiation_monitoring_dockwidget_base.ui
@@ -239,7 +239,7 @@
         <item row="5" column="0" colspan="2">
          <widget class="QLabel" name="label_9">
           <property name="text">
-           <string>Save to same directory as shapefile </string>
+           <string>Save to same directory as shapefile.</string>
           </property>
          </widget>
         </item>
